# amgadmadkour.github.io

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  CUSTOMIZE.md  Gemfile  INSTALL.md  README.md  _config.yml  docker-compose.yml  feed.xml  hello.py  index.html  package-lock.json  pyproject.toml  robots.txt  sitemap.xml
_bibliography/: papers.bib  talks.bib
_data/: cv.yml  navigation.yml  repositories.yml  socials.yml
_includes/: author-profile.html  latest_posts.liquid  scripts.liquid
_layouts/: about.liquid
_news/: announcement_microsoft_ai_shopping.md  announcement_microsoft_msr_internship.md  announcement_microsoft_satori.md  announcement_microsoft_satori_internship.md  announcement_microsoft_shopping.md  announcement_paper_iswc_2018.md  announcement_paper_plos_2019.md  announcement_paper_sigmod_sbd_2018_1.md  announcement_paper_sigmod_sbd_2018_2.md  announcement_phd_purdue.md  announcement_talk_kgc_2021.md  announcement_talk_purdue.md
_pages/: about.md  activities.md  blog.md  cv.md  non-menu-page.md  notes.md  profiles.md  projects.md  publications.md  repositories.md  sitemap.md  tag-archive.html  talks.html  talks.md  teaching.md  year-archive.html
_posts/: 2017-11-12-semantic-musings.md  2020-02-28-first-blog-post.md  2020-02-29-k8s-imag-size-restriction.md  2020-03-01-delete-kubernetes-node.md  2020-03-02-force-pod-deletion.md  2020-04-07-start-flask-sudo.md  2021-01-01-about-the-blog.md  2022-01-01-about-the-blog.md  2024-07-24-ml-intro.md  2025-01-04-modernbert.md  2025-08-14-semantickernel.md  2026-05-24-agent-framework.md
_sass/: _base.scss  (+2 more)
(+146 files in other folders)
