[project]
name = "amgadmadkour-github-io"
version = "0.1.0"
description = "Homepage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "nbconvert==7.16.5",
    "notebook>=7.3.2",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "uv>=0.5.21",
]
